--- a/CapaPresentación/CapaPresentación.csproj
+++ b/CapaPresentación/CapaPresentación.csproj
@@ -57,6 +57,12 @@
     <Compile Include="FrmPrincipal.Designer.cs">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPruebas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPruebas.Designer.cs">
+      <DependentUpon>FrmPruebas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmMenuInicial.resx">
