--- a/CapaPresentación/CapaPresentación.csproj
+++ b/CapaPresentación/CapaPresentación.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmConectarBD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmConectarBD.Designer.cs">
+      <DependentUpon>FrmConectarBD.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMenuInicial.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,8 +69,17 @@
     <Compile Include="FrmPruebas.Designer.cs">
       <DependentUpon>FrmPruebas.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmReportes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReportes.Designer.cs">
+      <DependentUpon>FrmReportes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmConectarBD.resx">
+      <DependentUpon>FrmConectarBD.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMenuInicial.resx">
       <DependentUpon>FrmMenuInicial.cs</DependentUpon>
     </EmbeddedResource>
@@ -73,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPruebas.resx">
       <DependentUpon>FrmPruebas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReportes.resx">
+      <DependentUpon>FrmReportes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
